# dosbox-automation

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THANKS  THIRD_PARTY_LICENSES.txt  vcpkg.json
.claude/rules/: code-style.md  commits.md  docs-style.md  versioning-guide.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
augrudottir-tools/: dosboxapictl  dosboxluactl  modify-licenses.py
cmake/: add_install_rules.cmake
docs/: AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  RESOURCES.md  SECURITY.md  TRANSLATING.md  build-linux.md  build-macos.md  build-windows.md  dosbox.1  vc_redist.txt
extras/api/: README.md
extras/icons/: .gitignore  Makefile
extras/linux/: install-icons.sh  org.dosbox_automation.dosbox_automation.desktop  org.dosbox_automation.dosbox_automation.metainfo.xml
extras/mcp/: README.md  pyproject.toml
extras/mcp/dosbox_mcp/: __init__.py  capabilities.py  client.py  config.py  connection.py  server.py
extras/mcp/dosbox_mcp/tools/: cpu.py  debug.py  freeze.py  input.py  io.py  media.py  memory.py  screen.py  script.py  session.py
extras/mcp/tests/: conftest.py  test_capabilities.py  test_client.py  test_config.py  test_connection.py  test_server.py
extras/scripts/: fetch-soundfont.sh
resources/drives/y/dos/: osd.asm  osd.com  setmode.asm  setmode.com
resources/icons/: Makefile  README.md
resources/soundfonts/: LICENSE-FluidR3_GM.txt  fetch-FluidR3_GM.sh
resources/translations/: de.po
resources/webserver/: api.html  index.html  openapi.json
scripts/ci/: get-version.sh
scripts/packaging/: create-package.sh
scripts/packaging/linux/: build-appimage.sh
scripts/tools/: set-version.py
src/: CMakeLists.txt  dosbox.cpp  dosbox.h  dosbox.rc  dosbox_config.h.in.cmake  main.cpp
src/audio/clap/: plugin_manager.cpp
src/capture/: capture.cpp  capture.h  capture_video.cpp
src/capture/private/: capture_video.h
src/capture/video/: zmbv.cpp  zmbv.h
src/config/: config.cpp  config.h
src/dos/: CMakeLists.txt  dos.cpp  dos.h  dos_code_page.cpp  dos_devices.cpp  dos_files.cpp  programs.cpp  programs.h
src/dos/programs/: boot.cpp  guide.cpp  loadrom.cpp  makeimg.cpp  manual.cpp  mem.h  mount.cpp  mount_policy.cpp  mount_policy.h  mount_policy_linux.h  mount_policy_windows.h  setver.cpp
src/gui/: CMakeLists.txt  sdl_gui.cpp  titlebar.cpp  titlebar.h
src/gui/osd/: draw_context.cpp  draw_context.h  gl_draw.cpp  gl_draw.h  osd.cpp  osd.h  osd_port.cpp  osd_port.h  sdl_draw.cpp  sdl_draw.h  sdl_shim.cpp  sdl_shim.h
src/gui/private/: common.h
src/gui/render/: opengl_renderer.cpp  opengl_renderer.h  render.cpp  sdl_renderer.cpp
src/hardware/audio/: tandy_sound.cpp
src/hardware/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  mouse_interfaces.cpp  mouseif_dos_driver.cpp
src/hardware/input/private/: mouse_interfaces.h
src/hardware/serialport/: softmodem.cpp
src/hardware/video/: vga_draw.cpp
src/ints/: int10_memory.cpp  int10_modes.cpp
src/lua/: CMakeLists.txt  lua_api.cpp  lua_api.h  lua_bridge_commands.cpp  lua_bridge_commands.h  lua_coroutine.cpp  lua_coroutine.h  lua_debug_log.cpp  lua_debug_log.h  lua_engine.cpp  lua_engine.h  script_validator.cpp  script_validator.h  text_input.cpp  text_input.h
src/midi/: alsa.cpp  fluidsynth.cpp
src/misc/: cross.cpp  messages_po_entry.cpp  support.cpp  video.h
src/platform/windows/: winres.rc.in
src/shell/: shell.cpp  shell_banner.h
src/webserver/: CMakeLists.txt  bridge.cpp  bridge.h  capture.cpp  capture.h  control.cpp  control.h  cpu.cpp  dos.cpp  dosbox.cpp  drive.cpp  drive.h  frame_tap.cpp  freeze.cpp  input.cpp  input.h  io_port.cpp  memory.cpp  video.cpp  video.h  webserver.cpp  webserver.h
src/webserver/private/: auth.h  cpu.h  dos.h  dosbox.h  frame_tap.h  freeze.h  io_port.h  memory.h  shutdown.h
tests/: CMakeLists.txt  ansi_code_markup_tests.cpp  dos_files_tests.cpp  dosbox_test_fixture.h  drives_tests.cpp  example_tests.cpp  lua_api_tests.cpp  lua_coroutine_tests.cpp  lua_engine_tests.cpp  mount_policy_tests.cpp  osd_tests.cpp  run-e2e.py  script_validator_tests.cpp  shell_banner_tests.cpp  shell_cmds_tests.cpp  shell_redirection_tests.cpp  text_input_tests.cpp  webserver_auth_tests.cpp  webserver_cpu_write_tests.cpp  webserver_dos_map_tests.cpp  webserver_frame_tap_tests.cpp  webserver_freeze_tests.cpp  webserver_io_port_tests.cpp  webserver_mem_search_tests.cpp
tests/files/: dosbox-automation-tests.conf
tests/files/disks/: .gitignore
tests/files/disks/augra-greeting-disk/: manifest.toml
tests/files/disks/doom-shareware/: manifest.toml
tests/files/disks/epic-pinball/: manifest.toml
tests/files/disks/lost-vikings/: manifest.toml
tests/files/disks/one-must-fall-2097/: manifest.toml
tests/files/disks/quest-for-glory-4/: manifest.toml
tests/files/disks/system-shock/: manifest.toml
tests/files/disks/the-incredible-machine-demo/: manifest.toml
tests/files/disks/transport-tycoon/: manifest.toml
tests/files/disks/turbo-pascal-55/: manifest.toml
tests/integration/: conftest.py  dosbox_client.py  e2e_helpers.py  record_install.py  record_session.py  replay_install.py  replay_recording.py  run_e2e_visual.py  run_riptide_demo.py  test_api_contract.py  test_capture_api.py  test_e2e_helpers.py  test_e2e_installs.py  test_graphics_modes.py  test_lua_api.py  test_lua_functions.py  test_mount_policy.py  test_openapi_docs.py  test_screen_text_machines.py  test_screen_text_route.py  test_token_provisioning.py  test_traversal_contract.py
tests/integration/data/: SOURCE.txt
tests/integration/data/doom-shareware/: disk1.ima  disk2.ima
tests/integration/data/omf2097/: disk1.img  disk2.img  disk3.img  disk4.img  disk5.img
tests/integration/data/white-wolf-11/: riptide-install-recording.json
vcpkg-ports/libsystemd/: disable-werror-override-init.patch  portfile.cmake
vcpkg-triplets/: x64-windows-static.cmake
