[project]
name = "dosbox-mcp"
version = "0.1.0"
description = "MCP bridge for the dosbox-automation REST API"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
dependencies = ["mcp>=1.2", "httpx>=0.27"]

[project.scripts]
dosbox-mcp = "dosbox_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
